# Single-thread-byte-converter

./: CMakeLists.txt  README.md  byteconverter.cpp  byteconverter.h  byteconvertertest.h  examplesink.h  sink.cpp  sink.h  source.cpp  source.h  testsource.h
libs/: CMakeLists.txt
src/: byteconverter.cpp  sink.h  source.h
test/: main.cpp
